repo-nginx/components/nginx/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: webserver
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: webserver
    spec:
      containers:
      - name: nginx
        image: registry.redhat.io/rhel8/nginx-120:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        # ConfigMap'imizi geçici ve güvenli bir dizine düz dosya olarak bağlıyoruz
        - name: html-volume
          mountPath: /tmp/html
      volumes:
      - name: html-volume
        configMap:
          name: index-html
          defaultMode: 420
